@@ -1,3 +1,7 @@
+Mon Dec  9 17:21:57 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* Makefile.am: Use guile-snarf.
+
 Sun Dec  8 02:09:53 1996  Gary Houston  <ghouston@actrix.gen.nz>
 
 	* Makefile.am (.c.x): define COMPILE with $(X_CFLAGS) added to the
